--- a/_config.yml
+++ b/_config.yml
@@ -14,31 +14,21 @@ sass:
   style: compressed # expanded
 
 # SEO settings
-title: end2end
+title: lisa
 description: "A free Jekyll theme for download"
 keywords: "Jekyll, theme, free, download, SEO, blog, web"
 url: http://nandomoreira.me
-baseurl: "/end2end"
+baseurl: ""
 layouts_dir: ./_layouts
 # baseurl: ""
 
+author:
+  thumb: /images/120.png
+
 # google_analytics: UA-52446115-1
-repo: http://github.com/nandomoreirame/end2end
 disqus_shortname: "fernandomoreira"
 disqus_site_shortname: "fernandomoreira"
 
-# Author settings
-author:
-  name      : Fernando Moreira
-  job       : Frontend Engineer
-  bio       : "Enthusiast performance, responsive design and usability, always looking for the best project and good coffee."
-  thumb     : /images/author.jpg
-  email     : nandomoreira.me@gmail.com
-  url       : http://nandomoreira.me
-  github    : http://github.com/nandomoreirame
-  twitter   : http://twitter.com/nandomoreirame
-  facebook  : http://facebook.com/fernando.dev
-  linkedin  : http://linkedin.com/in/nandomoreirame
 
 # navbar pages
 navbar:
